--- a/selfClose.html
+++ b/selfClose.html
@@ -9,10 +9,13 @@
 	
 
 	<script type="text/javascript">
- 		window.open('','_self').close();
+ 		//window.open('','_self').close();
 		
 // 		var win = window.open("about:blank", "_self");
 // 		win.close();
+		
+		
+		open(location, '_self').close();
 	</script>
 
 </body>
