--- a/selfClose.html
+++ b/selfClose.html
@@ -14,7 +14,7 @@
 // 		var win = window.open("about:blank", "_self");
 // 		win.close();
 		
-		
+		debugger;
 		open(location, '_self').close();
 	</script>
 
