--- a/selfClose.html
+++ b/selfClose.html
@@ -6,7 +6,7 @@
 </head>
 
 <body>
-	
+	<input type="button" value="Close this window" onclick="self.close()">
 
 	<script type="text/javascript">
  		//window.open('','_self').close();
@@ -14,8 +14,8 @@
 // 		var win = window.open("about:blank", "_self");
 // 		win.close();
 		
-		debugger;
-		open(location, '_self').close();
+		
+		//open(location, '_self').close();
 	</script>
 
 </body>
