--- a/selfClose.html
+++ b/selfClose.html
@@ -6,6 +6,8 @@
 </head>
 
 <body>
+	<a href="#" id="close-window">Close this window tab</a>
+	
 	<input type="button" value="Close this window" onclick="self.close()">
 
 	<script type="text/javascript">
@@ -16,6 +18,12 @@
 		
 		
 		//open(location, '_self').close();
+		
+		
+		
+		document.getElementById("close-window").addEventListener("click", function(){ 
+       window.close();
+   });
 	</script>
 
 </body>
