--- a/selfClose.html
+++ b/selfClose.html
@@ -26,7 +26,11 @@
 //    });
 		
 		
-		open(location, '_self').close();
+		//open(location, '_self').close();
+		
+		window.onload = function () {
+     open(location, '_self').close();
+   };
 	</script>
 
 </body>
