--- a/selfClose.html
+++ b/selfClose.html
@@ -28,9 +28,11 @@
 		
 		//open(location, '_self').close();
 		
-		window.onload = function () {
-     open(location, '_self').close();
-   };
+// 		window.onload = function () {
+//      open(location, '_self').close();
+//    };
+		
+		setTimeout("window.close()", 6000);
 	</script>
 
 </body>
