--- a/selfClose.html
+++ b/selfClose.html
@@ -58,8 +58,8 @@
 //     window.close();
 //  }
 		
-		 window.open('', '_self', '');
-        window.close();
+		window.open('', '_parent', '');
+window.close();
 	</script>
 
 </body>
