--- a/selfClose.html
+++ b/selfClose.html
@@ -5,7 +5,7 @@
 	<title>Dummy Page</title>
 </head>
 
-<body>
+<body onload="window.close();">
 <!-- 	<a href="#" id="close-window">Close this window tab</a>
 	
 	<input type="button" value="Close this window" onclick="self.close()"> -->
@@ -58,8 +58,8 @@
 //     window.close();
 //  }
 		
-		window.open('', '_parent', '');
-window.close();
+// 		window.open('', '_parent', '');
+// window.close();
 	</script>
 
 </body>
